diplom-1. внесение правок